# mprpc

./: CMakeLists.txt  mprpc.conf
example/: user.proto
example/callee/: CMakeLists.txt  userservice.cc
example/caller/: CMakeLists.txt  calluserservice.cc
src/: logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpcprovider.cc  rpcheader.proto
src/include/: lockqueue.h  logger.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  mprpcprovider.h
test/proto/: a.out  main  main.cc  test.pb.cc  test.pb.h  test.proto
